--- a/restaurants/templates/navbar.html
+++ b/restaurants/templates/navbar.html
@@ -10,11 +10,36 @@
         <a class="nav-link" href="{% url 'restaurant-create' %}">Create Restaurant</a>
       </li>
     </ul>
-    
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+        </li>
+      </ul>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'signout' %}">Sign Out</a>
+          </li>
+        </ul>
+
+
+
+        <div class="form-inline my-2 my-lg-0" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'signin' %}">Sign In</a>
+            </li>
+          </ul>
+
+
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" name='q' placeholder="I don't do anything">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
-    
+
+
   </div>
 </nav>
